--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Lamp-of-Fate_3824
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Pedler, Margaret
@@ -7,6 +10,8 @@ creator:
     gutenberg_agent_id: '1125'
     url: http://www.gutenberg.org/2009/agents/1125
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3824#The-Lamp-of-Fate
 gutenberg_issued: '2006-04-13'
 gutenberg_type: Text
 identifiers:
