--- a/metadata.yaml
+++ b/metadata.yaml
@@ -9,7 +9,7 @@ creator:
     deathdate: 1948
     gutenberg_agent_id: '1125'
     url: http://www.gutenberg.org/2009/agents/1125
-description: ''
+description: 'The story of a woman who tried to take all and give nothing. '
 edition_identifiers:
   edition_id: http://www.gutenberg.org/ebooks/3824#The-Lamp-of-Fate
 gutenberg_issued: '2006-04-13'
